<resources>
    <string name="app_name">Brick Book</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="download">Download</string>
    <string name="noInternet">No internet connection</string>
    <string name="banner_ad_unit_id">ca-app-pub-6526618984663462/6824438634</string>
    <string name="pdf_show_local_progress_title">Downloading pdf file from the server</string>
    <string name="pdf_show_online_dialog_title">Open instruction in GoogleDrive ?</string>
    <string name="pdf_show_online_dialog_question">On your device not installed the program supports the format of pdf, Lego instruction will be opened with the help of cloud service GoogleDrive.</string>
    <string name="pdf_show_local_progress_content">Downloading...</string>
    <string name="pdf_show_online_dialog_button_no">No</string>
    <string name="pdf_show_online_dialog_button_yes">Yes</string>
    <string name="num_a8065">8065    A</string>
    <string name="num_b8065">8065    B</string>
    <string name="num_a42032">42032    A</string>
    <string name="num_b42032">42032    B</string>
    <string name="name_a42032">Compact Tracked Loader</string>
    <string name="name_b42032">Snow Groomer</string>
    <string name="name_a8065">Mini Container Truck</string>
    <string name="name_b8065">Pick-up Truck</string>
    <string name="name_a42044">Display Team Jet</string>
    <string name="num_a42044">42044   A</string>
    <string name="name_b42044">Stunt Plane</string>
    <string name="num_b42044">42044   B</string>
    <string name="name_a42045">Hydroplane Racer</string>
    <string name="num_a42045">42045   A</string>
    <string name="name_b42045">Race Boat</string>
    <string name="num_b42045">42045   B</string>
    <string name="name_a42046">Getaway Racer</string>
    <string name="num_a42046">42046</string>
    <string name="name_a42047">Police Interceptor</string>
    <string name="num_a42047">42047</string>
    <string name="name_a42046plus42047">Extreme Police Racer</string>
    <string name="num_a42046plus42047">42046 + 42047</string>
    <string name="name_a42048">Race Kart</string>
    <string name="num_a42048">42048   A</string>
    <string name="name_b42048">Track Car</string>
    <string name="num_b42048">42048   B</string>
    <string name="name_a42049">Mine Loader</string>
    <string name="num_a42049">42049   A</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_technic">Technic</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fileDeleted">File Delited</string>
    <string name="fileDownloaded">File Downloaded</string>
    <string name="startDownloaded">Started Downloading</string>
    <string name="num_b42049">42049   B</string>
    <string name="name_b42049">Mine Cutting Machine</string>
    <string name="num_a42050">42050   A</string>
    <string name="name_a42050">Drag Racer</string>
    <string name="name_b42050">Supercharged Dragster</string>
    <string name="num_b42050">42050   B</string>
    <string name="name_a42052">Heavy Lift Helicopter</string>
    <string name="num_a42052">42052   A</string>
    <string name="num_b42052">42052   B</string>
    <string name="name_b42052">Tandem Rotor Helicopter</string>
    <string name="technicpressed" />
    <string name="technic">Technic</string>
    <string name="title_activity_architecture">Architecture</string>
    <string name="num_arc21022">21022</string>
    <string name="name_arc21022">Lincoln Memorial</string>
    <string name="num_arc21023">21023</string>
    <string name="name_arc21023">Flatiron Building</string>
    <string name="num_arc21024">21024</string>
    <string name="name_arc21024">Louvre</string>
    <string name="num_arc21026">21026</string>
    <string name="name_arc21026">Venice</string>
    <string name="num_arc21027">21027</string>
    <string name="name_arc21027">Berlin</string>
    <string name="num_arc21028">21028</string>
    <string name="name_arc21028">New York City</string>
    <string name="num_arc21031">21031</string>
    <string name="name_arc21031">Burj Khalifa</string>
    <string name="title_activity_city">City</string>
    <string name="num_city60044">60044</string>
    <string name="name_city60044">Mobile Police Unit</string>
    <string name="num_city60047">60047</string>
    <string name="name_city60047">Police Station</string>
    <string name="num_city60050">60050</string>
    <string name="name_city60050">Train Station</string>
    <string name="num_city60051">60051</string>
    <string name="name_city60051">High-speed Passenger Train</string>
    <string name="num_city60052">60052</string>
    <string name="name_city60052">Cargo Train</string>
    <string name="num_city60067">60067</string>
    <string name="name_city60067">Helicopter Pursuit</string>
    <string name="num_city60069">60069</string>
    <string name="name_city60069">Swamp Police Station</string>
    <string name="num_city60072">60072</string>
    <string name="name_city60072">Demolition Starter Set</string>
    <string name="num_city60073">60073</string>
    <string name="name_city60073">Service Truck</string>
    <string name="num_city60074">60074</string>
    <string name="name_city60074">Bulldozer</string>
    <string name="num_city60076">60076</string>
    <string name="name_city60076">Demolition Site</string>
    <string name="num_city60077">60077</string>
    <string name="name_city60077">Space Starter Set</string>
    <string name="num_city60078">60078</string>
    <string name="name_city60078">Utility Shuttle</string>
    <string name="num_city60079">60079</string>
    <string name="name_city60079">Training Jet Transporter</string>
    <string name="num_city60080">60080</string>
    <string name="name_city60080">Spaceport</string>
    <string name="num_city60081">60081</string>
    <string name="name_city60081">Pickup Tow Truck</string>
    <string name="num_city60084">60084</string>
    <string name="name_city60084">Racing Bike Transporter</string>
    <string name="num_city60085">60085</string>
    <string name="name_city60085">4x4 with Powerboat</string>
    <string name="num_city60090">60090</string>
    <string name="name_city60090">Deep Sea Scuba Scooter</string>
    <string name="num_city60091">60091</string>
    <string name="name_city60091">Deep Sea Starter Set</string>
    <string name="num_city60092">60092</string>
    <string name="name_city60092">Deep Sea Submarine</string>
    <string name="num_city60093">60093</string>
    <string name="name_city60093">Deep Sea Helicopter</string>
    <string name="num_city60095">60095</string>
    <string name="name_city60095">Deep Sea Exploration Vessel</string>
    <string name="num_city60097">60097</string>
    <string name="name_city60097">City Square</string>
    <string name="num_city60105">60105</string>
    <string name="name_city60105">Fire ATV</string>
    <string name="name_city60106">Fire Starter Set</string>
    <string name="num_city60106">60106</string>
    <string name="num_city60107">60107</string>
    <string name="name_city60107">Fire Ladder Truck</string>
    <string name="num_city60108">60108</string>
    <string name="name_city60108">Fire Responce Unit</string>
    <string name="name_city60109">Fire Boat</string>
    <string name="num_city60109">60109</string>
    <string name="num_city60110">60110</string>
    <string name="name_city60110">Fire Station</string>
    <string name="num_city60111">60111</string>
    <string name="name_city60111">Fire Utility Truck</string>
    <string name="num_city60113">60113</string>
    <string name="name_city60113">Rally Car</string>
    <string name="num_city60114">60114</string>
    <string name="name_city60114">Race Boat</string>
    <string name="num_city60115">60115</string>
    <string name="name_city60115">4 x 4 Off Roader</string>
    <string name="num_city60116">60116</string>
    <string name="name_city60116">Ambulance Plane</string>
    <string name="name_city60117"><![CDATA[Van & Caravan]]></string>
    <string name="num_city60117">60117</string>
    <string name="num_city60118">60118</string>
    <string name="name_city60118">Garbage Truck</string>
    <string name="num_city60119">60119</string>
    <string name="name_city60119">Ferry</string>
    <string name="num_city60126">60126</string>
    <string name="name_city60126">Tire Escape</string>
    <string name="name_city60127">Prison Island Starter Set</string>
    <string name="num_city60127">60127</string>
    <string name="num_city60128">60128</string>
    <string name="name_city60128">Police Pursuit</string>
    <string name="num_city60129">60129</string>
    <string name="name_city60129">Police Patrol Boat</string>
    <string name="num_city60130">60130</string>
    <string name="name_city60130">Prison Island</string>
    <string name="num_tecA42030">42030   A</string>
    <string name="name_tecA42030">VOLVO L350F Wheel Load</string>
    <string name="num_tecB42030">42030   B</string>
    <string name="name_tecB42030">Volvo A25F Articulated Hauler</string>
    <string name="num_tecA42031">42031   A</string>
    <string name="num_tecB42031">42031   B</string>
    <string name="name_tecA42031">Cherry Picker</string>
    <string name="name_tecB42031">Tow Truck</string>
    <string name="num_42033">42033</string>
    <string name="num_42034">42034</string>
    <string name="name_42033">Record Breaker</string>
    <string name="name_42034">Quad Bike</string>
    <string name="num_42033plus42034">42033 + 42034</string>
    <string name="name_42033plus42034">Extreme Off-Roader Viewer</string>
    <string name="num_tecB42035">42035    B</string>
    <string name="num_tecA42035">42035   A</string>
    <string name="name_tecA42035">Mining Truck</string>
    <string name="name_tecB42035">Wheel Dozer</string>
    <string name="num_tecA42036">42036   A</string>
    <string name="name_tecA42036">Street Motorcycle</string>
    <string name="num_tecB42036">42036   B</string>
    <string name="name_tecB42036">Retro Bike</string>
    <string name="num_tecB42037">42037   B</string>
    <string name="num_tecA42037">42037   A</string>
    <string name="name_tecA42037">Formula Off-Roader</string>
    <string name="name_tecB42037">Muscle Racer</string>
    <string name="num_tecB42038">42038   B</string>
    <string name="num_tecA42038">42038   A</string>
    <string name="name_tecA42038">Arctic Truck</string>
    <string name="name_tecB42038">Pickup Truck</string>
    <string name="num_tecB42039">42039   B</string>
    <string name="num_tecA42039">42039   A</string>
    <string name="name_tecA42039">24 Hours Race Car</string>
    <string name="name_tecB42039">SUV Racer</string>
    <string name="num_tecB42040">42040   B</string>
    <string name="num_tecA42040">42040   A</string>
    <string name="name_tecA42040">Fire Plane</string>
    <string name="name_tecB42040">Jet Plane</string>
    <string name="num_tecB42042">42042   B</string>
    <string name="num_tecA42042">42042   A</string>
    <string name="name_tecA42042">Crawler Crane</string>
    <string name="name_tecB42042">Mobile Tower Crane</string>
    <string name="num_tecA42043">42043   A</string>
    <string name="name_tecA42043">Mercedes-Benz Arocs 3245</string>
    <string name="title_activity_creator">Creator</string>
    <string name="num_cre31027">31027</string>
    <string name="name_cre31027">Blue Racer</string>
    <string name="num_cre31028">31028</string>
    <string name="name_cre31028">Sea Plane</string>
    <string name="num_cre31029">31028</string>
    <string name="name_cre31029">Cargo Heli</string>
    <string name="num_cre31031">31031</string>
    <string name="name_cre31031">Rainforest Animals</string>
    <string name="num_cre31032">31032</string>
    <string name="name_cre31032">Red Creatures</string>
</resources>