<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tibro.brickcatalog.Architecture"
    tools:showIn="@layout/activity_architecture"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_marginBottom="@dimen/activity_vertical_margin" >

                <ImageView
                    android:id="@+id/imageArc21022"
                    android:background="@drawable/arc21022"
                    style="@style/lego_image"
                    android:clickable="false" />

                <TextView
                    android:text="@string/name_arc21022"
                    android:id="@+id/textView"
                    style="@style/set_name"
                    android:layout_toRightOf="@+id/imageArc21022"
                    android:layout_toEndOf="@+id/imageArc21022"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:text="@string/num_arc21022"
                    android:id="@+id/textView2"
                    style="@style/set_number"
                    android:layout_toRightOf="@+id/imageArc21022"
                    android:layout_toEndOf="@+id/imageArc21022"
                    tools:ignore="DuplicateIds" />

                <!--<Spinner-->
                    <!--android:id="@+id/spinnerArc21022"-->
                    <!--style="@style/spinner_book" />-->

                <com.dd.CircularProgressButton
                    style="@style/button"
                    android:id="@+id/butArc21022"
                    app:cpb_textComplete="@string/open"
                    app:cpb_textIdle="@string/download"/>

                <com.dd.CircularProgressButton
                    app:cpb_textIdle="@string/delete"
                    android:id="@+id/dArc21022"
                    style="@style/button_delete"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/imageArc21023"
                    android:background="@drawable/arc21023"
                    style="@style/lego_image" />

                <TextView
                    android:text="@string/name_arc21023"
                    android:id="@+id/textView"
                    style="@style/set_name"
                    android:layout_toRightOf="@+id/imageArc21023"
                    android:layout_toEndOf="@+id/imageArc21023"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:text="@string/num_arc21023"
                    android:id="@+id/textView2"
                    style="@style/set_number"
                    android:layout_toRightOf="@+id/imageArc21023"
                    android:layout_toEndOf="@+id/imageArc21023"
                    tools:ignore="DuplicateIds" />

                <!--<Spinner-->
                <!--android:id="@+id/spinnerB8065"-->
                <!--style="@style/spinner_book" />-->

                <com.dd.CircularProgressButton
                    app:cpb_textComplete="@string/open"
                    app:cpb_textIdle="@string/download"
                    style="@style/button"
                    android:id="@+id/butArc21023"/>


                <com.dd.CircularProgressButton
                    app:cpb_textIdle="@string/delete"
                    android:id="@+id/dArc21023"
                    style="@style/button_delete" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/imageArc21024"
                    android:background="@drawable/arc21024"
                    style="@style/lego_image" />

                <TextView
                    android:text="@string/name_arc21024"
                    android:id="@+id/textView"
                    style="@style/set_name"
                    android:layout_toRightOf="@+id/imageArc21024"
                    android:layout_toEndOf="@+id/imageArc21024"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:text="@string/num_arc21024"
                    android:id="@+id/textView2"
                    style="@style/set_number"
                    android:layout_toRightOf="@+id/imageArc21024"
                    android:layout_toEndOf="@+id/imageArc21024"
                    tools:ignore="DuplicateIds" />

                <!--<Spinner-->
                <!--android:id="@+id/spinnerB8065"-->
                <!--style="@style/spinner_book" />-->

                <com.dd.CircularProgressButton
                    app:cpb_textComplete="@string/open"
                    app:cpb_textIdle="@string/download"
                    style="@style/button"
                    android:id="@+id/butArc21024" />


                <com.dd.CircularProgressButton
                    app:cpb_textIdle="@string/delete"
                    android:id="@+id/dArc21024"
                    style="@style/button_delete"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/imageArc21026"
                    android:background="@drawable/arc21026"
                    style="@style/lego_image" />

                <TextView
                    android:text="@string/name_arc21026"
                    android:id="@+id/textView"
                    style="@style/set_name"
                    android:layout_toRightOf="@+id/imageArc21026"
                    android:layout_toEndOf="@+id/imageArc21026"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:text="@string/num_arc21026"
                    android:id="@+id/textView2"
                    style="@style/set_number"
                    android:layout_toRightOf="@+id/imageArc21026"
                    android:layout_toEndOf="@+id/imageArc21026"
                    tools:ignore="DuplicateIds" />

                <!--<Spinner-->
                <!--android:id="@+id/spinnerB8065"-->
                <!--style="@style/spinner_book" />-->

                <com.dd.CircularProgressButton
                    app:cpb_textComplete="@string/open"
                    app:cpb_textIdle="@string/download"
                    style="@style/button"
                    android:id="@+id/butArc21026"
                    />

                <com.dd.CircularProgressButton
                    app:cpb_textIdle="@string/delete"
                    android:id="@+id/dArc21026"
                    style="@style/button_delete"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/imageArc21027"
                    android:background="@drawable/arc21027"
                    style="@style/lego_image" />

                <TextView
                    android:text="@string/name_arc21027"
                    android:id="@+id/textView"
                    style="@style/set_name"
                    android:layout_toRightOf="@+id/imageArc21027"
                    android:layout_toEndOf="@+id/imageArc21027"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:text="@string/num_arc21027"
                    android:id="@+id/textView2"
                    style="@style/set_number"
                    android:layout_toRightOf="@+id/imageArc21027"
                    android:layout_toEndOf="@+id/imageArc21027"
                    tools:ignore="DuplicateIds" />

                <!--<Spinner-->
                <!--android:id="@+id/spinnerB8065"-->
                <!--style="@style/spinner_book" />-->

                <com.dd.CircularProgressButton
                    app:cpb_textComplete="@string/open"
                    app:cpb_textIdle="@string/download"
                    style="@style/button"
                    android:id="@+id/butArc21027"/>


                <com.dd.CircularProgressButton
                    app:cpb_textIdle="@string/delete"
                    android:id="@+id/dArc21027"
                    style="@style/button_delete" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/imageArc21028"
                    android:background="@drawable/arc21028"
                    style="@style/lego_image" />

                <TextView
                    android:text="@string/name_arc21028"
                    android:id="@+id/textView"
                    style="@style/set_name"
                    android:layout_toRightOf="@+id/imageArc21028"
                    android:layout_toEndOf="@+id/imageArc21028"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:text="@string/num_arc21028"
                    android:id="@+id/textView2"
                    style="@style/set_number"
                    android:layout_toRightOf="@+id/imageArc21028"
                    android:layout_toEndOf="@+id/imageArc21028"
                    tools:ignore="DuplicateIds" />

                <!--<Spinner-->
                <!--android:id="@+id/spinnerB8065"-->
                <!--style="@style/spinner_book" />-->

                <com.dd.CircularProgressButton
                    app:cpb_textComplete="@string/open"
                    app:cpb_textIdle="@string/download"
                    style="@style/button"
                    android:id="@+id/butArc21028" />


                <com.dd.CircularProgressButton
                    app:cpb_textIdle="@string/delete"
                    android:id="@+id/dArc21028"
                    style="@style/button_delete"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/imageArc21031"
                    android:background="@drawable/arc21031"
                    style="@style/lego_image" />

                <TextView
                    android:text="@string/name_arc21031"
                    android:id="@+id/textView"
                    style="@style/set_name"
                    android:layout_toRightOf="@+id/imageArc21031"
                    android:layout_toEndOf="@+id/imageArc21031"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:text="@string/num_arc21031"
                    android:id="@+id/textView2"
                    style="@style/set_number"
                    android:layout_toRightOf="@+id/imageArc21031"
                    android:layout_toEndOf="@+id/imageArc21031"
                    tools:ignore="DuplicateIds" />

                <!--<Spinner-->
                <!--android:id="@+id/spinnerB8065"-->
                <!--style="@style/spinner_book" />-->

                <com.dd.CircularProgressButton
                    app:cpb_textComplete="@string/open"
                    app:cpb_textIdle="@string/download"
                    style="@style/button"
                    android:id="@+id/butArc21031"
                    />

                <com.dd.CircularProgressButton
                    app:cpb_textIdle="@string/delete"
                    android:id="@+id/dArc21031"
                    style="@style/button_delete"/>

            </RelativeLayout>



        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <com.appodeal.ads.BannerView
            android:id="@+id/appodealBannerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


</LinearLayout>
